# Acolyte

./: .gitignore  CMakeLists.txt  README.md
include/Acolyte/: exports.h  item.h  logger.h  player.h  playerclass.h  sfml.h  utils.h  vagante.h  vaganteutils.h
include/Vagante/: ai.h  audio.h  effects.h  entities.h  enums.h  forward.h  geometry.h  graphic.h  items.h  misc.h  net.h  sfml.h  sprite.h  stage.h
include/sigslot/: signal.hpp
lib/safetyhook/: CMakeLists.txt
src/: CMakeLists.txt  core.cpp  version.cpp
src/inc/: core.h  parser.h  sdk_registry.h  toml.hpp
src/sdk/: item.cpp  player.cpp  playerclass.cpp
src/util/: logger.cpp  parser.cpp  sdk_registry.cpp  utils.cpp  vaganteutils.cpp
